--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-			<li class="nav-item"><a class="nav-link" href="5.O/assets/img/code.html">Downloads</a></li>
+			<li class="nav-item"><a class="nav-link" href="assets/img/code.html">Downloads</a></li>
                     </ul>
                 </div>
             </div>
